feat:完成配置修改和上传图片
