# routers/api/upload.go
@@ -1,0 +1,71 @@
+package api
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+
+	"github.com/huanggengzhong/go-gin-example/pkg/e"
+	"github.com/huanggengzhong/go-gin-example/pkg/logging"
+	"github.com/huanggengzhong/go-gin-example/pkg/upload"
+)
+
+// ShowAccount godoc
+//
+//	@Summary		上传
+//	@Description	上传图片
+//	@Tags			通用
+//	@Accept			json
+//	@Produce		json
+//
+// @Param image formData file true "Image File"
+//
+//	@Success		200 {string} json "{"code":200,"data":{"token":"xx"},"msg":"ok"}"
+//
+//	@Router			/upload [post]
+func UploadImage(c *gin.Context) {
+	code := e.SUCCESS
+	data := make(map[string]string)
+
+	file, image, err := c.Request.FormFile("image")
+	if err != nil {
+		logging.Warn(err)
+		code = e.ERROR
+		c.JSON(http.StatusOK, gin.H{
+			"code": code,
+			"msg":  e.GetMsg(code),
+			"data": data,
+		})
+	}
+
+	if image == nil {
+		code = e.INVALID_PARAMS
+	} else {
+		imageName := upload.GetImageName(image.Filename)
+		fullPath := upload.GetImageFullPath()
+		savePath := upload.GetImagePath()
+
+		src := fullPath + imageName
+		if !upload.CheckImageExt(imageName) || !upload.CheckImageSize(file) {
+			code = e.ERROR_UPLOAD_CHECK_IMAGE_FORMAT
+		} else {
+			err := upload.CheckImage(fullPath)
+			if err != nil {
+				logging.Warn(err)
+				code = e.ERROR_UPLOAD_CHECK_IMAGE_FAIL
+			} else if err := c.SaveUploadedFile(image, src); err != nil {
+				logging.Warn(err)
+				code = e.ERROR_UPLOAD_SAVE_IMAGE_FAIL
+			} else {
+				data["image_url"] = upload.GetImageFullUrl(imageName)
+				data["image_save_url"] = savePath + imageName
+			}
+		}
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code),
+		"data": data,
+	})
+}
